<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Github</string>
    <string name="list">List User</string>
    <string name="detail">Detail User</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="repository1">%s Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="follower1">%s Follower</string>
    <string name="following1">"%s Following"</string>
    <string name="search">Search</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="logo" translatable="false">logo</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="favorite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="message">Come a look at your favorite user</string>
    <string name="repeating_alarm">Repeating alarm set up</string>
    <string name="cancel_alarm">Repeating alarm is canceled</string>
    <string name="alarm_time">Alarm Time</string>

</resources>