<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/red_500"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivPhoto"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUser"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository1"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivFolder"
            app:layout_constraintTop_toTopOf="@id/ivFolder"
            app:layout_constraintStart_toEndOf="@id/ivFolder"/>

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFolder"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivLocation"
            app:layout_constraintTop_toTopOf="@id/ivLocation"
            app:layout_constraintStart_toEndOf="@id/ivLocation"/>

        <ImageView
            android:id="@+id/ivBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_business"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/tvLocation"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            app:layout_constraintTop_toTopOf="@id/tvLocation"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="16sp"
            android:minLines="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivBusiness"
            app:layout_constraintTop_toTopOf="@id/ivBusiness"
            app:layout_constraintStart_toEndOf="@id/ivBusiness"/>

            <ImageView
                android:id="@+id/ivFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLocation"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvFollower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/ivFollowers"
                app:layout_constraintTop_toBottomOf="@id/ivFollowers"
                app:layout_constraintTop_toTopOf="@id/ivFollowers"/>

            <ImageView
                android:id="@+id/ivFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people"
                tools:ignore="ContentDescription"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tvFollower"
                app:layout_constraintTop_toBottomOf="@id/tvFollower"
                app:layout_constraintTop_toTopOf="@id/tvFollower"/>

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/ivFollowing"
                app:layout_constraintTop_toBottomOf="@id/ivFollowing"
                app:layout_constraintTop_toTopOf="@id/ivFollowing"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFollowing"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>